<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    android:orientation="vertical"

    android:scrollbarAlwaysDrawVerticalTrack="true">




    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">
        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorLightGreen"
                        android:singleLine="true"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorLightGreen"
                        android:singleLine="true"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:singleLine="true"
                        android:drawableTint="@color/colorLightGreen"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPasswordVerify"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:singleLine="true"
                        android:drawableTint="@color/colorLightGreen"
                        android:hint="@string/verifyPassword"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/bRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#d67601"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/colotText"
                    android:textSize="18sp" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/logga"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/plantlogin" />
</RelativeLayout>