<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/greenbackground"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:id="@+id/bac_dim_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#75000000"
        android:visibility="gone"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/addPlantform"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <ScrollView
            android:id="@+id/settings_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/notifications"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/tvTimeforNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableRight="@drawable/ic_access_time_grey_600_24dp"
                    android:text="@string/notificatidonTime"
                    tools:layout_editor_absoluteX="108dp"
                    tools:layout_editor_absoluteY="92dp"
                    android:textSize="16dp"/>


                <TextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/changePassword"
                    tools:layout_editor_absoluteX="108dp"
                    tools:layout_editor_absoluteY="92dp"
                    android:textSize="16dp"/>



                <TextView
                    android:id="@+id/tvShareplants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_margin="8dp"
                    tools:layout_editor_absoluteX="108dp"
                    tools:layout_editor_absoluteY="92dp"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/tvLogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16dp"
                    android:text="@string/logOut"   />






            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/addPlantImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/ic_settings_white_48dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:menu="@menu/navigation"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/colorAccent"
            app:layout_constraintRight_toRightOf="parent" />




    </android.support.constraint.ConstraintLayout>


</RelativeLayout>