<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/greenbackground"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:id="@+id/bac_dim_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#75000000"
        android:visibility="gone"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/addPlantform"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPlantSort"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plantSort"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPlantName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorLightGreen"
                        android:hint="@string/plantname"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/tvWaterIntervall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/waterIntervall" />

                <SeekBar
                    android:id="@+id/sbWaterIntervall"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="1"
                    android:max="50"
                    android:progressDrawable="@color/colorWhite"
                     />

                <TextView
                    android:id="@+id/tvDaysSinceWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/daysSinceWater" />

                <SeekBar
                    android:id="@+id/sbDaysSinceWater"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="1"
                    android:max="50"
                    android:progressDrawable="@color/colorWhite"
                    tools:layout_editor_absoluteX="124dp"
                    tools:layout_editor_absoluteY="206dp" />


                <Button
                    android:id="@+id/bCreatePlant"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#d67601"
                    android:text="@string/saveImage"
                    android:textAllCaps="false"
                    android:textColor="@color/colotText"
                    android:textSize="18sp" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/addPlantImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/ic_add_white_48dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:menu="@menu/navigation"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/colorAccent"
            app:layout_constraintRight_toRightOf="parent" />




    </android.support.constraint.ConstraintLayout>

    </RelativeLayout>